fixed password field masking

--- a/Downloads/WorkingLogRegDontMess/LoginRegistration/app/views/users/new.html.erb
+++ b/Downloads/WorkingLogRegDontMess/LoginRegistration/app/views/users/new.html.erb
@@ -114,7 +114,7 @@
 
 
       <% if @user.errors.include?(:password) %>
-            <div style='color:red;'> Password: <%= f.text_field :password %> </div><br>
+            <div style='color:red;'> Password: <%= f.password_field :password %> </div><br>
       <% else %>  
             Password:         <%= f.password_field :password %> <br>
       <% end %> 
